# ai_lecture

./: .gitignore  main.py  namecard.py  pyproject.toml  readme.md  torch_check_gpu.py
.claude/: settings.local.json
beginer_tutorial/: ex07_model.py  ex08_linear_reg.py  ex08_logitics_reg.py  pred_sine.py
data_science/: ex01_covid19.py  ex01_covid19_us.py  ex02_covid19_hawaii.py  ex02_hawaii.py  ex03_stackoverflow_survey.py  ex04_folim.py  ex05_seoul_metro.py  readme.md
data_science/datasets/: lotto_2.csv
data_science/lotto/: ex01.py  ex02.py  ex03.py  ex03_2.py
data_science/lotto/app/: app.py  datasetuitl.py
lotto/: ex01.py  ex02.py  ex03.py  lotto_1.csv
openai_study/: readme.md
pytorch/: .gitignore  boston.py  cifar_10.py  cifar_10_cnn.py  cifar_10_cnn_test.py  cifar_10_cnn_train.py  cifar_10_normal.py  cifar_10_transform.py  cifat_10_mean.py  linear_pred_sine.py  linear_reg_simple_sine.py  mnist.py  myVggNet.py
pytorch/dataset_exam/: eval.py  generate.py  load_dataset.py  model.py  my_dataset.py  train_xor.py
